progress on distro

--- a/src/api/template.yaml
+++ b/src/api/template.yaml
@@ -112,13 +112,11 @@ Resources:
     Properties:
       DistributionConfig: 
         Aliases: 
-          - String
-        AnycastIpListId: String
+          - !Join [ "", [!If [IsProd, "", "dev."], !Ref Domain ] ]
         CacheBehaviors: 
           - CacheBehavior
         CNAMEs: 
           - String
-        Comment: String
         ContinuousDeploymentPolicyId: String
         CustomErrorResponses: 
           - CustomErrorResponse
