--- a/src/api/template.yaml
+++ b/src/api/template.yaml
@@ -91,8 +91,8 @@ Resources:
       #     "Statement": [
       #         {
       #             "Sid": "PublicReadGetObject",
-      #             "Effect": "Allow",
-      #             "Principal": "*",
+      #             "Effect": "Allow", done
+      #             "Principal": "*", done
       #             "Action": "s3:GetObject", done
       #             "Resource": "arn:aws:s3:::dev.forcepu.sh/*"
       #         }
@@ -108,17 +108,8 @@ Resources:
           - Action:
               - s3:GetObject
             Effect: Allow
-            Resource: !Join
-              - ''
-              - - 'arn:aws:s3:::'
-                - !Ref DOC-EXAMPLE-BUCKET
-                - /*
+            Resource: !Sub arn:aws:s3:::${UIBucket}/*
             Principal: '*'
-            Condition:
-              StringLike:
-                'aws:Referer':
-                  - 'http://www.example.com/*'
-                  - 'http://example.net/*'
   HostedZone: 
     Type: AWS::Route53::HostedZone
     Properties: 
