--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FORCEPU.SH",
+  "name": "Algotrade.io",
   "private": true,
   "version": "0.6.2",
   "description": "Vite app for FORCEPU.SH",
