--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -71,20 +71,21 @@ jobs:
           pnpm run swagger
 
       - name: Build app [${{ fromJSON('["dev","prod"]')[github.ref_name == 'master'] }}]
-        run: pnpm run build:ui && echo "CF_DISTRO_ID=${CF_DISTRO_ID}" >> $GITHUB_ENV
+        run: pnpm run build:ui
         env:
           VITE_APP_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           VITE_APP_IDENTITY_POOL_ID: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_IDENTITY_POOL_ID, secrets.IDENTITY_POOL_ID))[github.ref_name == 'master'] }}
           VITE_APP_USER_POOL_ID: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_USER_POOL_ID, secrets.USER_POOL_ID))[github.ref_name == 'master'] }}
           VITE_APP_WEB_CLIENT_ID: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_WEB_CLIENT_ID, secrets.WEB_CLIENT_ID))[github.ref_name == 'master'] }}
           VITE_APP_OAUTH_DOMAIN: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_OAUTH_DOMAIN, secrets.OAUTH_DOMAIN))[github.ref_name == 'master'] }}
-          CF_DISTRO_ID: ${{ fromJSON(format('["{0}","{1}"]', secrets.DEV_CF_DISTRO_ID, secrets.CF_DISTRO_ID))[github.ref_name == 'master'] }}
           VITE_COVERAGE: ${{ fromJSON(format('["{0}","{1}"]', true, false))[github.ref_name == 'master'] }}
 
       - name: Get CloudFormation Outputs
         run: |
           AWS_S3_BUCKET=$(aws cloudformation describe-stacks --stack-name api-dev --query 'Stacks[0].Outputs[?OutputKey==`UIBucketName`].OutputValue' --output text)
+          CF_DISTRO_ID=$(aws cloudformation describe-stacks --stack-name api-dev --query 'Stacks[0].Outputs[?OutputKey==`UIDistroId`].OutputValue' --output text)
           echo "AWS_S3_BUCKET=${AWS_S3_BUCKET}" >> $GITHUB_ENV
+          echo "CF_DISTRO_ID=${CF_DISTRO_ID}" >> $GITHUB_ENV
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
