replace domain in api

--- a/src/api/template.yaml
+++ b/src/api/template.yaml
@@ -755,6 +755,7 @@ Resources:
           TABLE_NAME: !Ref UsersTable
           STRIPE_PRICE_ID: !Ref StripePriceId
           STAGE: !Ref Stage
+          DOMAIN: !Ref Domain
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref UsersTable
@@ -788,6 +789,7 @@ Resources:
           STRIPE_SECRET_KEY: !Ref StripeSecretKey
           TABLE_NAME: !Ref UsersTable
           STAGE: !Ref Stage
+          DOMAIN: !Ref Domain
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref UsersTable
